# care-connect-emr

./: .gitignore  README.md  render.yaml
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_revoked_tokens.py
backend/app/: __init__.py  main.py  worker.py
backend/app/api/: __init__.py  admin.py  appointments.py  auth.py  dashboard.py  deps.py  doctors.py  emr.py  notifications.py  prescriptions.py  schemas.py  signaling.py
backend/app/assets/: README.md
backend/app/core/: __init__.py  config.py  db.py  encryption.py  errors.py  security.py
backend/app/models/: __init__.py  appointment.py  audit.py  base.py  clinical.py  delivery.py  enums.py  notification.py  user.py
backend/app/services/: __init__.py  account_service.py  appointment_service.py  auth_service.py  dashboard_service.py  email_service.py  emr_service.py  inapp_notification_service.py  mailer.py  notification_service.py  (+6 more)
backend/tests/: conftest.py  strategies.py  test_account_management.py  test_appointment_notifications.py  test_appointments.py  test_dashboard.py  test_deployment_config.py  test_doctor_profile.py  test_emr.py  test_encryption.py  test_error_envelope.py  test_health.py  test_integration.py  test_login.py  test_logout_reset.py  test_notifications.py  test_password_hashing.py  test_prescriptions.py  test_rbac.py  test_registration.py  test_schema_constraints.py  test_signaling.py  test_signaling_integration.py  test_slots.py
(+53 files in other folders)
